--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     //card view
     implementation 'com.android.support:cardview-v7:28.0.0'
 
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
+
     //glide
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'com.android.support:support-v4:28.0.0'
