--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,12 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".ui.filter.FilterActivity">
+        </activity>
+        <activity android:name=".ui.verification.VerificationActivity">
+        </activity>
+        <activity android:name=".ui.order.OrderFinalActivity">
+        </activity>
         <activity android:name=".ui.menu.MenuActivity">
         </activity>
         <activity android:name=".ui.car.detail.CarDetailActivity">
